Changes
=======

This documents changes as they are made.  Note that if you received this file
via CVS the version of the first entry is the forthcoming version number.

0.40
--------------------
- HISTORY now takes parameters for number of entries to display, and where
  to start from.  Mserv now remembers last 100 played tracks (compile option)

0.39 - Sep 13th 2003
--------------------
- Default configuration is now written to config.dist on load (if it can)
- Album and author lists are now dynamically allocated in the same way as
  genre lists, so no more compiled limit on tracks per album
- Fix off-by-one error in -r command line option
- Report an error on start-up if an old configuration file is used
- Most debugging is now on -d command line option rather than compile-time
- Better debugging messages in Icecast output engine
- Log people connecting to Mserv
- Fix ogg player line in configuration file

0.38a - Aug 31st 2003
---------------------
- Fixed compilation problem
- Removed file descriptor leak on trackinfo errors

0.38 - Aug 31st 2003
--------------------
- Added SET VOLUME command to change relative track volume (a percentage,
  with 100 as default)
- Fixed HELP SET syntax display
- Increased space for album/track by one (now 7 characters instead of 6) in
  display
- Added xmp to default configuration
- Implemented volume control for Icecast output
- Make TREBLE/BASS return error for Icecast output mode (not implemented)
- Changed unheard and unrated from integers (1-4) to percentage for increased
  choice and made them options in configuration file.
- Changed default unheard rating from 0.75 (GOOD) to 0.55 (just above NEUTRAL)

0.37 - Aug 24th 2003
--------------------
- Changed to using execvp so PATH will affect the search for players
- Gap between songs is now an exact number of silence bytes, making it
  possible for Mserv to have no gap at all (useful for mixes)
- GAP now takes a floating point number